--- a/worker.html
+++ b/worker.html
@@ -9,9 +9,9 @@
     <input type="file" id="modelImport" />
     <canvas id="predictionChart" width="800" height="400"></canvas>
 
-    <script>
+    <script type="module">
         import { Xdata, Ydata } from './data.js';
-        
+
         document.getElementById('modelImport').addEventListener('change', async function (e) {
             const file = e.target.files[0];
             if (file) {
